# ticket-triage-env

./: README.md
server/: app.py
ticket-triage-env/: Dockerfile  README.md  Requirements.txt  app.py  environment.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
