[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ticket-triage-env"
version = "1.0.0"
description = "A real-world customer support ticket triage OpenEnv environment"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Aravind S"}
]
keywords = ["openenv", "reinforcement-learning", "ai-agent", "customer-support"]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
serve = "server.app:main"
start = "server.app:main"

[project.urls]
"Homepage" = "https://huggingface.co/spaces/aadhesh2025/ticket-triage-env"
"Repository" = "https://github.com/Crypto-Type/ticket-triage-env"

[tool.setuptools.packages.find]
where = ["."]

[openenv]
name = "ticket-triage-env"
version = "1.0.0"
config = "openenv.yaml"
entry_point = "server.app:main"
framework = "fastapi"
